src/objects/Credit_Assessment__c.object
<CustomObject>
    <description>AMP Credit Assessment Custom Object</description>
    <fields>
        <fullName>AML_KYC_score__c</fullName>
        <label>AML/KYC score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMP_Credit_Score__c</fullName>
        <label>AMP Credit Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APR_Approved__c</fullName>
        <label>Approved APR</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APR__c</fullName>
        <formula>Opportunity__r.APR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Details__c</fullName>
        <label>Additional Information Details</label>
        <picklist>
            <controllingField>Additional_Information_Required__c</controllingField>
            <picklistValues>
                <fullName>Financial Info-Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Info- Management Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence Of Time Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor Details-Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor Details-Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence Of Additional Capitalisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification Over Residential Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Asset &amp; Liability Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Narrative__c</fullName>
        <label>Additional Information Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Required__c</fullName>
        <label>Additional Information Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Satisfactory__c</fullName>
        <label>Additional Information Satisfactory</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Calculation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Annual Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Assessments (Applicant Name)</relationshipLabel>
        <relationshipName>Credit_Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Documentation__c</fullName>
        <formula>HYPERLINK(
IF( 
CONTAINS($Api.Enterprise_Server_URL_260, &quot;cs81&quot;), 
&quot;https://advancedpay.sharepoint.com/sites/ampdev/&quot;, 
IF( 
CONTAINS($Api.Enterprise_Server_URL_260, &quot;cs80&quot;), 
&quot;https://advancedpay.sharepoint.com/sites/QA/&quot;, 
&quot;https://sharepoint.amp-creditech.com/sites/clientdocs/&quot; 
) 
)+Country__c+&quot;/Forms/AllItems.aspx?RootFolder=%2Fsites%2Fampdev%2F&quot;+Country__c+&quot;%2F&quot; + 
 SUBSTITUTE(
    SUBSTITUTE(
     SUBSTITUTE(
      SUBSTITUTE(
       SUBSTITUTE(
        SUBSTITUTE(
         SUBSTITUTE(
          SUBSTITUTE(
           SUBSTITUTE(
            SUBSTITUTE(
             SUBSTITUTE(
              SUBSTITUTE(
               SUBSTITUTE(
                SUBSTITUTE(
                 SUBSTITUTE(Opportunity__r.Account.Name, &quot;&amp;&quot;, &quot;-&quot;)
                , &quot;/&quot;, &quot;-&quot;)
               , &quot;\\&quot;, &quot;-&quot;)
              , &quot;{&quot;, &quot;-&quot;)
             , &quot;|&quot;, &quot;-&quot;)
            , &quot;}&quot;, &quot;-&quot;)
         , &quot;~&quot;, &quot;-&quot;)
        , &quot;\&quot;&quot;, &quot;-&quot;)
       , &quot;#&quot;, &quot;-&quot;)
      , &quot;%&quot;, &quot;-&quot;)
     , &quot;*&quot;, &quot;-&quot;)
    , &quot;:&quot;, &quot;-&quot;)
   , &quot;&lt;&quot;, &quot;-&quot;)
  , &quot;&gt;&quot;, &quot;-&quot;)
 , &quot;?&quot;, &quot;-&quot;) +  
 &quot;_&quot; +
 Opportunity__r.Account.Client_ID__c  + 
 &quot;%2F&quot; + 
 text(year(  DATEVALUE(Opportunity__r.CreatedDate ) )) + 
 LPAD(TEXT( MONTH(  DATEVALUE(Opportunity__r.CreatedDate ) ) ), 2, &quot;0&quot;) +
 LPAD(TEXT( DAY(  DATEVALUE(Opportunity__r.CreatedDate ) ) ), 2, &quot;0&quot;) + 
 &quot;_&quot; +
 Opportunity__r.Application_ID2__c,
 &apos;Click Here&apos;, 
 &apos;_blank&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Temporary link to Application Documentation</inlineHelpText>
        <label>Application Documentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <formula>Opportunity__r.Application_ID2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <formula>TEXT( Opportunity__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_APR__c</fullName>
        <formula>APR_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Amount_Per_Repayment__c</fullName>
        <label>Approved Amount Per Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Interest_Rate__c</fullName>
        <label>Approved Interest Rate</label>
        <picklist>
            <picklistValues>
                <fullName>18%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>31%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Interest_Rate_formula__c</fullName>
        <formula>TEXT(Approved_Interest_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Interest Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Interest__c</fullName>
        <label>Approved Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Loan_Amount__c</fullName>
        <label>Approved Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Loan_Term_Formula__c</fullName>
        <formula>TEXT(Approved_Loan_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Loan Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Loan_Term__c</fullName>
        <label>Approved Loan Term</label>
        <picklist>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (365 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Total_Repayment__c</fullName>
        <label>Approved Total Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_total_income__c</fullName>
        <label>Avg Monthly total income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_total_income_benchmark__c</fullName>
        <defaultValue>19000</defaultValue>
        <label>Avg Monthly total income benchmark</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_IQ_Score__c</fullName>
        <label>Business IQ Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Legal_Name__c</fullName>
        <formula>Business_Trading_Name__r.Business_Legal_Name__c</formula>
        <label>Business Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Role__c</fullName>
        <formula>TEXT(Applicant_Name__r.PersonContact.Business_Position__c)</formula>
        <label>Business Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Trading_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Trading Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Assessments</relationshipLabel>
        <relationshipName>Credit_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCJ_main_applicant__c</fullName>
        <label>CCJ main applicant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCJ_main_other_direct__c</fullName>
        <label>CCJ main other direct.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_daily_income__c</fullName>
        <label>Cash daily income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_daily_income_percentage__c</fullName>
        <formula>IF( OR(ISBLANK( Total_Daily_Income__c ), Total_Daily_Income__c == 0 ), 0, BLANKVALUE( Cash_daily_income__c , 0) /  Total_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Cash daily income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Opportunity__r.Account.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Offer_Amount__c</fullName>
        <formula>Opportunity__r.Conditional_Offer_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditional Offer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consent_to_Search__c</fullName>
        <formula>IF(TEXT(Applicant_Name__r.PersonContact.Consent_to_Search__c)  = &apos;Yes&apos;, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent to Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costs_Avg_Monthly_income_ratio__c</fullName>
        <formula>IF ( BLANKVALUE( Avg_Monthly_total_income__c , 0 ) == 0, 0, BLANKVALUE( Total_Daily_Expenditure__c , 0 ) / Avg_Monthly_total_income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costs vs Avg Monthly income ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Costs_vs_Avg_M_income_ratio_benchmark__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Costs vs Avg M. income ratio benchmark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(contains(RecordType.DeveloperName,&apos;Philippines&apos;),&apos;PP&apos;,
IF(contains(RecordType.DeveloperName,&apos;Hong&apos;),&apos;HK&apos;,
IF(contains(RecordType.DeveloperName,&apos;Singapore&apos;),&apos;SG&apos;,&apos;UK&apos;)))</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_File_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit File Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_repayments__c</fullName>
        <label>Daily Repayments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_in_overdraft__c</fullName>
        <label># Days in overdraft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delphi__c</fullName>
        <label>Delphi</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursed_Amount_Per_Repayment__c</fullName>
        <label>Disbursed Amount Per Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Interest_Rate__c</fullName>
        <label>Disbursed Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disbursed_Interest__c</fullName>
        <label>Disbursed Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Loan_Amount__c</fullName>
        <label>Disbursed Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Loan_Term__c</fullName>
        <label>Disbursed Loan Term</label>
        <picklist>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (360 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disbursed_Number_Of_Repayments__c</fullName>
        <label>Disbursed Number Of Repayments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursed_Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_avail_cashflow_no_rent__c</fullName>
        <formula>BLANKVALUE(Electronic_Daily_Income__c, 0 )  - ( BLANKVALUE( Daily_repayments__c , 0 ) + BLANKVALUE( Other_Financial_commitments_daily__c , 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elec. avail. cashflow (no rent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Elec_avail_cashflow_with_rent__c</fullName>
        <formula>BLANKVALUE( Electronic_Daily_Income__c , 0 ) - ( BLANKVALUE( Daily_repayments__c , 0 ) + BLANKVALUE( Other_Financial_commitments_daily__c , 0 ) + BLANKVALUE( Rental_daily__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elec. avail. cashflow (with rent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electronic_Daily_Income__c</fullName>
        <label>Electronic daily income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electronic_Daily_Income_percentage__c</fullName>
        <formula>IF (BLANKVALUE( Total_Daily_Income__c, 0 ) == 0, 0, BLANKVALUE( Electronic_Daily_Income__c , 0 ) /  Total_Daily_Income__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Electronic daily income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Experian_Credit_Score__c</fullName>
        <label>Experian Credit Score</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FOC__c</fullName>
        <formula>TEXT(Opportunity__r.FOC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency of Collection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Date__c</fullName>
        <label>Final Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Decision__c</fullName>
        <label>Final Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Income_change_M1_to_M2__c</fullName>
        <label>Income change - M1 to M2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Income_change_M2_to_M3__c</fullName>
        <label>Income change - M2 to M3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Amount_Approved__c</fullName>
        <formula>CEILING((Approved_Loan_Amount__c * Interest_Calculation__c * Loan_Term_In_Days__c/365)*100)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Amount (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Calculation__c</fullName>
        <formula>IF(Annual_Calculation__c,Monthly_Interest_Approved__c,Monthly_Interest_Approved__c*12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Calculation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Daily_Repayment_Approved__c</fullName>
        <formula>IF(Number_of_Repayments_Approved__c&lt;&gt;0,
round((((Interest_Calculation__c)/365*Loan_Term_In_Days__c)*Approved_Loan_Amount__c/Number_of_Repayments_Approved__c),2),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Daily Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Daily_Repayment_Offer__c</fullName>
        <label>Interest Daily Repayment (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Daily_Repayment_Requested__c</fullName>
        <formula>Opportunity__r.Interest_Daily_Repayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Daily Repayment (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Band__c</fullName>
        <formula>TEXT(Program_Product_ASO__r.Product__r.Min_Interest_rate__c) &amp; &quot; - &quot; &amp;  TEXT(Program_Product_ASO__r.Product__r.Max_Interest_rate__c) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Weekly_Repayment_Approved__c</fullName>
        <label>Interest Weekly Repayment (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Weekly_Repayment_Offer__c</fullName>
        <label>Interest Weekly Repayment (Offer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Weekly_Repayment_Requested__c</fullName>
        <formula>Opportunity__r.Interest_Weekly_Repayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Weekly Repayment (Requested)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <formula>TEXT(Opportunity__r.Loan_Purpose__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Purpose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Term_In_Days__c</fullName>
        <formula>VALUE( MID(TEXT( Approved_Loan_Term__c), 5, 3) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Term In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Term_In_Months_Approved__c</fullName>
        <formula>VALUE( MID(TEXT( Approved_Loan_Term__c ), 0, 2) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Term In Months(Approved)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest_Approved__c</fullName>
        <label>Annual Interest (Approved)</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest_Requested__c</fullName>
        <defaultValue>IF(OR($RecordType.DeveloperName == &apos;Credit_Assessment_UK&apos;,$RecordType.DeveloperName == &apos;Credit_Assessment_Completed&apos;) ,  $Setup.IR__c.Annual_UK__c ,  $Setup.IR__c.Annual__c )</defaultValue>
        <label>Annual Interest (Requested)</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest__c</fullName>
        <defaultValue>IF(OR($RecordType.DeveloperName == &apos;Credit_Assessment_UK&apos;,$RecordType.DeveloperName == &apos;Credit_Assessment_Completed&apos;) ,  $Setup.IR__c.Annual_UK__c ,  $Setup.IR__c.Annual__c )</defaultValue>
        <label>Annual Interest</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Narrative_Box__c</fullName>
        <label>Narrative Box</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Bounce_backs__c</fullName>
        <label># of Bounce backs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Repayments_Approved__c</fullName>
        <formula>if(isnumber(left(text(Approved_Loan_Term__c),2)),
CASE(VALUE(MID(TEXT(Approved_Loan_Term__c),0,2)),
03,62,
04,84,
05,106,
06,126,
07,149,
08,170,
09,192,
12,259,
0),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Repayments (Approved)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Repayments_Offer__c</fullName>
        <label>Number of Repayments (Offer)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Repayments_Requested__c</fullName>
        <formula>IF(FOC__c=&apos;Weekly&apos;,Opportunity__r.No_of_Repayments_Weekly__c,Opportunity__r.No_of_Repayments_Daily__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Repayments (Requested)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Weekly_Repayments_Approved__c</fullName>
        <label>Number of Weekly Repayments (Approved)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Amount__c</fullName>
        <label>Offer Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Term__c</fullName>
        <label>Offer Term</label>
        <picklist>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (365 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Total_Repayment__c</fullName>
        <label>Offer Total Repayment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Assessments</relationshipLabel>
        <relationshipName>Credit_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Financial_commitments_daily__c</fullName>
        <label>Other Financial commitments daily</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overdraft_usage_percentage__c</fullName>
        <label>% of overdraft usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paid_In_M1__c</fullName>
        <label>Paid In M1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_In_M2__c</fullName>
        <label>Paid In M2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_In_M3__c</fullName>
        <label>Paid In M3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Out_M1__c</fullName>
        <label>Paid Out M1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Out_M2__c</fullName>
        <label>Paid Out M2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Out_M3__c</fullName>
        <label>Paid Out M3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>